# gpg-inspector

./: .gitignore  .justfile  CLAUDE.md  Cargo.toml  README.md  RFC4880_COMPLIANCE.md  RFC9580_COMPLIANCE.md  justfile  tarpaulin.toml
.github/workflows/: audit.yml  check-and-lint.yaml  ci.yml  homebrew-bump.yml  release.yml  style.yml  test.yml
crates/gpg-inspector/: Cargo.toml
crates/gpg-inspector-lib/: Cargo.toml
crates/gpg-inspector-lib/src/: armor.rs  error.rs  lib.rs
crates/gpg-inspector-lib/src/packet/: compressed_data.rs  fingerprint.rs  literal_data.rs  one_pass_signature.rs  pkesk.rs  public_key.rs  secret_key.rs  seipd.rs  signature.rs  subpackets.rs  tags.rs  user_attribute.rs
crates/gpg-inspector-lib/tests/: armor.rs  fingerprint.rs  integration.rs  lookup.rs  packets.rs  public_key.rs  signature.rs  stream.rs
crates/gpg-inspector-lib/tests/packets/: compressed_data.rs  format.rs  literal_data.rs  mdc.rs  misc.rs  one_pass_signature.rs  pkesk.rs  secret_key.rs  seipd.rs  skesk.rs  user_attribute.rs
crates/gpg-inspector/src/: app.rs  clipboard.rs  event.rs  lib.rs  main.rs  output.rs
crates/gpg-inspector/src/ui/: colors.rs  data_panel.rs  hex_panel.rs  input_panel.rs  mod.rs  overlays.rs
crates/gpg-inspector/tests/: app.rs  clipboard.rs  event.rs
fixtures/: test.cleartext.asc  test.compressed.gpg  test.key  test.key.gpg
gpg-inspector/: Cargo.toml
gpg-inspector-lib/: Cargo.toml
gpg-inspector-lib/src/: armor.rs  color.rs  error.rs  lib.rs  lookup.rs  stream.rs
gpg-inspector-lib/src/packet/: compressed_data.rs  fingerprint.rs  literal_data.rs  mdc.rs  misc.rs  mod.rs  pkesk.rs  public_key.rs  secret_key.rs  seipd.rs  signature.rs  skesk.rs  subpackets.rs  tags.rs  user_id.rs
gpg-inspector-lib/tests/: armor.rs  fingerprint.rs  integration.rs  lookup.rs  packets.rs  public_key.rs  signature.rs
gpg-inspector-lib/tests/packets/: compressed_data.rs  format.rs  one_pass_signature.rs  pkesk.rs  seipd.rs  skesk.rs  tags.rs  user_attribute.rs
gpg-inspector/src/: app.rs  clipboard.rs  event.rs  lib.rs  main.rs  output.rs
gpg-inspector/src/ui/: colors.rs  data_panel.rs  hex_panel.rs  input_panel.rs  mod.rs  overlays.rs
gpg-inspector/tests/: app.rs  clipboard.rs  event.rs  ui.rs
