[workspace]
resolver = "3"
members = ["crates/gpg-inspector", "crates/gpg-inspector-lib"]
default-members = ["crates/gpg-inspector"]

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Jacob Heider <jhheider@gmail.com>"]
repository = "https://github.com/jhheider/gpg-inspector"
license = "MIT"
keywords = ["gpg", "openpgp", "pgp", "cryptography", "parsing"]
categories = ["cryptography", "parser-implementations"]
