[workspace]
resolver = "3"
members = ["crates/gpg-inspector", "crates/gpg-inspector-lib"]
default-members = ["crates/gpg-inspector"]

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Jacob Heider <jhheider@gmail.com>"]
repository = "https://github.com/jhheider/gpg-inspector"
license = "MIT"
keywords = ["gpg", "openpgp", "pgp", "cryptography", "parsing"]
categories = ["cryptography", "parser-implementations"]

[workspace.dependencies]
# TUI binary
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
color-eyre = "0.6.5"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# Library
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
bzip2 = "0.6"
