[package]
name = "gpg-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:hex"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
gpg-inspector-lib = { path = "../gpg-inspector-lib" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }
