[package]
name = "gpg-inspector-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A library for parsing and inspecting OpenPGP (GPG) packets according to RFC 4880 and RFC 9580"
readme = "../../README.md"
documentation = "https://docs.rs/gpg-inspector-lib"

[features]
default = ["decompress"]
decompress = ["dep:flate2", "dep:bzip2"]

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true, optional = true }
bzip2 = { workspace = true, optional = true }
