[package]
name = "gpg-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A TUI for parsing and inspecting OpenPGP (GPG) packets according to RFC 4880 and RFC 9580"
readme = "../../README.md"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:hex"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
gpg-inspector-lib = { version = "0.8.0", path = "../gpg-inspector-lib" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
color-eyre = "0.6.5"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }
